--- a/Face Invaders/res/values/strings.xml
+++ b/Face Invaders/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">Face Invaders</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Face Invaders!!!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
 
