--- a/Face Invaders/res/values/strings.xml
+++ b/Face Invaders/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="app_name">Face Invaders</string>
     <string name="hello_world">Face Invaders!!!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Face Invaders</string>
 
 </resources>
